compose functionality working
