# backend/src/app.js
@@ -35,6 +35,8 @@ app.use(
 app.get('/v0/mail', auth.check, mail.getMailbox);
 app.get('/v0/mailboxes', auth.check, mail.getMailboxes);
 app.post('/v0/mail/:id', auth.check, mail.postMail);
+app.post('/v0/mail', auth.check, mail.postNewMail);
+app.get('/v0/user', auth.check, mail.getUser);
 
 
 
